@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: file.n,v 1.20 2002/06/21 14:22:28 vincentdarley Exp $
+'\" RCS: @(#) $Id: file.n,v 1.21 2002/07/11 17:42:20 vincentdarley Exp $
 '\" 
 .so man.macros
 .TH file n 8.3 Tcl "Tcl Built-In Commands"
@@ -258,25 +258,19 @@ under Windows or AppleScript on the Macintosh.
 \fBfile normalize \fIname\fR
 .
 .RS
-Returns a unique normalised path representation for the file-system 
-object (file, directory, link, etc), whose string value can be used as 
-a unique identifier for it.  A normalized path is one which has all '../', './' 
-removed.  Also it is one which is in the ``standard'' format for the native 
-platform.  On MacOS, Unix, this means the segments leading up to the path 
-must be free of symbolic links/aliases (but the very last path component 
-may be a symbolic link), and on Windows it also means means we want the
-long form (when running Win NT/2000/XP) or the short form (when running Win
-95/98) with that form's case-dependence (which gives us a unique,
-case-dependent path).  The one exception concerning the last link in the
-path is necessary, because Tcl or the user may wish to operate on the
-actual symbolic link itself (for example 'file delete', 'file rename', 'file copy'
-are defined to operate on symbolic links, not on the things that they point to).
-.PP
-Note that this means normalized paths are different on old Windows
-operating systems (95/98) and new Windows operating systems
-(NT/2000/XP).  This is necessary because the APIs  
-to produce a long normalized path in older operating systems are 
-unfortunately very slow.
+Returns a unique normalised path representation for the file-system
+object (file, directory, link, etc), whose string value can be used as a
+unique identifier for it.  A normalized path is one which has all '../',
+'./' removed.  Also it is one which is in the ``standard'' format for the
+native platform.  On MacOS, Unix, this means the segments leading up to
+the path must be free of symbolic links/aliases (but the very last path
+component may be a symbolic link), and on Windows it also means means we
+want the long form with that form's case-dependence (which gives us a
+unique, case-dependent path).  The one exception concerning the last link
+in the path is necessary, because Tcl or the user may wish to operate on
+the actual symbolic link itself (for example 'file delete', 'file
+rename', 'file copy' are defined to operate on symbolic links, not on the
+things that they point to).
 .RE
 .TP
 \fBfile owned \fIname\fR 
